Fix row/col on mobile

--- a/public/assets/votescount.css
+++ b/public/assets/votescount.css
@@ -328,10 +328,10 @@ p>select { padding: 0;      margin: 0 .5em; }
 .row { display: flex; margin:  0.5rem -0.6rem; align-items: stretch; }
 .row [class*="col"] { padding: 0  0.6rem; }
 .row .col   { flex: 1 1 100%; }
-.row .col-2 { flex: 0 0 16.66%; max-width: 16.66%;}
-.row .col-3 { flex: 0 0 25%; max-width: 25%;}
-.row .col-4 { flex: 0 0 33.33%; max-width: 33.33%; }
-.row .col-5 { flex: 0 0 41.66%; max-width: 41.66%; }
+.row .col-2 { flex: 0 0 16.66%; }
+.row .col-3 { flex: 0 0 25%; }
+.row .col-4 { flex: 0 0 33.33%; }
+.row .col-5 { flex: 0 0 41.66%; }
 .row .col-6 { flex: 0 0 50%; max-width: 50%; }
 @media (max-width: 40rem) { .row { flex-direction: column; } }
 
